--- a/apps/web/src/index.html
+++ b/apps/web/src/index.html
@@ -2,7 +2,7 @@
 <html class="dark" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>JNeal</title>
+    <title>JNeal - Software Engineer, World Traveler, Lifelong Gamer</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
